--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -1,8 +1,18 @@
-<div class="container-fluid">
-  <h1>Welcome to Storetastic</h1>
-  <p>Where you can find all your purchasing goods need for purchasing goods that you need. Hooray!</p>
-
+<div class="container">
   <div class="row">
+    <h1>Welcome to Storetastic</h1>
+    <p>Where you can find all your purchasing goods need for purchasing goods that you need. Hooray!</p>
+
+    <% if params[:category_id] %>
+      <h3>All <%= @category.name %></h3>
+    <% else %>
+      <h3>All Products</h3>
+    <% end %>
+
+    <% if @products.empty? %>
+      <h2>There are no products in <%= @category.name %></h2>
+    <% end %>
+
     <% @products.each do |product| %>
       <div class="col-sm-4">
         <div class="panel panel-default">
