--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -28,7 +28,7 @@
     <li>
       <%= form_tag(shop_path, method: :get, role: 'search', class: 'navbar-form') do %>
         <div class="form-group">
-          <%= text_field_tag(:search, nil, placeholder: 'Search Products', class: 'form-control input-sm') %>
+          <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: 'form-control input-sm') %>
         </div>
         <%= submit_tag('Search', class: 'btn btn-default btn-sm') %>
       <% end %>
