--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -26,6 +26,9 @@
 
   <ul class="nav navbar-nav navbar-right">
     <li>
+      <%= link_to fa_icon('shopping-cart', text: 'Your Cart'), edit_cart_path %>
+    </li>
+    <li>
       <%= form_tag(shop_path, method: :get, role: 'search', class: 'navbar-form') do %>
         <div class="form-group">
           <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: 'form-control input-sm') %>
