Add new order form

--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -33,7 +33,13 @@
                             method: :delete,
                             data: { confirm: 'Are you sure?' },
                             class: 'btn btn-danger btn-sm' %>
+
+    <div>
+      <%= link_to 'Checkout', new_order_path, class: 'btn btn-info btn-sm' %>
+    </div>
   <% end %>
+
+
 </div>
 
 
