--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,8 @@
-<h1>Checkout</h1>
-<h3>Please Enter Your Details</h3>
+<div class="order-form">
+  <h1>Checkout</h1>
+  <h3>Please Enter Your Details</h3>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back to Cart', cart_path(session[:cart_id]), class: 'btn btn-default' %>
+  <%= link_to 'Back to Cart', cart_path(session[:cart_id]), class: 'btn btn-default' %>
+</div>
