--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -4,13 +4,13 @@
     <p>Where you can find all your purchasing goods need for purchasing goods that you need. Hooray!</p>
 
     <% if params[:category_id] %>
-      <h3>All <%= @category.try(:name) %></h3>
+      <h3>All <%= @category.try(:name) if @category %></h3>
     <% else %>
       <h3>All Products</h3>
     <% end %>
 
     <% if @products.empty? %>
-      <h2>There are no products in <%= @category.try(:name) %></h2>
+      <h2>There are no products in <%= @category.try(:name) if @category %></h2>
     <% end %>
 
     <% @products.each do |product| %>
